--- a/Source/Xicht/Xicht.csproj
+++ b/Source/Xicht/Xicht.csproj
@@ -98,6 +98,8 @@
     <None Include="Resources\Icon\Xicht_tray.png" />
     <None Include="Resources\About\faces_reinchard.png" />
     <None Include="Resources\Tray\tray_none.ico" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Xicht.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
